# fusedb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: lookup.rs
python/fusedb/: __init__.py
src/: lib.rs
src/core/: error.rs  format.rs  mod.rs  reader.rs  writer.rs
src/python/: error.rs  mod.rs  reader.rs  util.rs  writer.rs
tests/: test_fusedb.py
